# plantation_station

./: .eslintignore  .gitignore  .gitmodules  .solcover.js  README.md  hardhat.config.js  package.json
.github/workflows/: workflow.yaml
abis/: GrowRegistry.json
bos/: PlantationStation2.tsx
contracts/: GrowFactory.sol  GrowRegistry.sol  README.md
contracts/test/: ReentrancyAttacker.sol
docs/: abci_app.md  systems_diagram.md
infra/: README.md  inventory.ini  pyproject.toml
infra/playbooks/: deploy.yaml  key-provision.yaml  rustc.yaml  setup-pi.yaml  setup-poetry.yaml  setup-services.yaml  tendermint.yaml
infra/services/: agent  agent.service  tendermint  tendermint.service
mas/: Makefile  pyproject.toml
mas/mints/: 01.json  02.json  03.json  04.json  05.json  mapping.txt
mas/scripts/: make_meta.sh  start_agent.sh
scripts/deployment/: deploy_01_grow_registry.js  globals_gnosis_chiado.json  globals_gnosis_mainnet.json  globals_polygon_mainnet.json  globals_polygon_mumbai.json  verify_01_grow_registry.js
test/: GrowFactory.js  GrowRegistry.js
